# hsa

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.gitlab/: alse.yml  win64.yml
include/HSA-CSharp/: HSANativeLibraryInterface.cs  Telemetry.cs  TelemetryProvider.cs
src/c++/: adapter.c++  adapter.h  clilogger.c++  clilogger.h  config.c++  config.h  datagram.h  def.h  enumutils.h  export.h  hsa.h  main.c++  parameters.h  protocolparser.c++  protocolparser.h  protocolparser_callbacks.c++  ruavputility.h  socket.c++  socket.h
src/c++/config/: config.c++  config.h
src/c++/export/: dgram.h  export.h
src/c++/ip/: isocket.h  socket.c++  socket.h  socketasio.c++  socketasio.h  socketqtnetwork.c++  socketqtnetwork.h
src/c++/protocol/: README.md  data.h  datagram.h  parameters.h  protocolparser.c++  protocolparser.h  ruavputility.c++  ruavputility.h  wrapper.h
src/c++/standalone/: main.c++
src/c++/utility/: clilogger.c++  clilogger.h  errorcodes.h
src/rust/: Cargo.toml
src/rust/src/: main.rs
src/rust/src/adapter/: mod.rs  socket.rs
